# pgaco

./: .gitignore  .gitmodules  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  ruff.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
slurmruns/ali/: submit_ali.sh  tuning_ali_aco.sbatch  tuning_ali_acopg-clip.sbatch  tuning_ali_acopg.sbatch  tuning_ali_acosgd-l2.sbatch  tuning_ali_acosgd.sbatch  tuning_ali_adaco.sbatch  tuning_ali_antq.sbatch  tuning_ali_mmaco.sbatch
slurmruns/att/: clean.sh  submit_ali.sh  tuning_att_aco.sbatch  tuning_att_adaco.sbatch  tuning_att_antq.sbatch  tuning_att_mmaco.sbatch  tuning_att_pgaco-ratio-clip.sbatch
slurmruns/comparative/ali535/: ali535_aco.sbatch  ali535_acopg.sbatch  ali535_acoppo.sbatch  ali535_acosgd.sbatch  ali535_adaco.sbatch  ali535_mmaco.sbatch
slurmruns/comparative/att532/: att532_aco.sbatch  att532_acopg.sbatch  att532_acoppo.sbatch  att532_acosgd.sbatch  att532_adaco.sbatch  att532_mmaco.sbatch
slurmruns/comparative/pcb422/: pcb422_acoppo.sbatch  pcb422_acosgd.sbatch  pcb422_adaco.sbatch  pcb422_mmaco.sbatch
slurmruns/comparative/pr2392/: pr2392_aco.sbatch  pr2392_acopg.sbatch  pr2392_adaco.sbatch
src/pgaco/: .gitignore  __init__.py  bayesian_tuning.py  cli.py  graphing.ipynb  hyperbayesrunner.sh  hyperrunner.sh  main.py  models.md  models.org  notify-runner.sh  plot_run.py
src/pgaco/analysis/: Makefile  advantage_test.py  ai_tspplot.py  analysis.ipynb  bayesian_tuning.py  bayesian_tuning_pgaco-log.py  hyperrunner.sh  plot_run.py  profiling.py  run_save.py  runtime_plotter.py  tsp_plot.py
src/pgaco/efficient_rewrite/: Makefile  __init__.py  aco.py  gradient_bandit.py  main.py  out.txt  parallel_aco_run.py  prebuilt.py  tuning.py
src/pgaco/experiments/ablation/: import.ipynb
src/pgaco/model/: ACA.py  ACO.py  ACO_run_0.txt  ADACO.py  ANTQ.py  EliteACA.py  GPGACA.py  PGACO.py  PGACO_LOG.py  PGACO_RATIO.py  PGACO_RATIO_CLIP.py  __init__.py  main.py  minmaxACA.py  plot_run.py
src/pgaco/models/: __init__.py  aco.py  acobase.py  acopg.py  acosgd.py  adaco.py  antq.py  profile_results.txt
src/pgaco/models/__legacy/: PGACO.py  __init__.py  aco_recalc.py  acosgd_recalc.py
src/pgaco/tuning/: burnin_pruner.py  hyperbayesrunner.sh  test.py  tuning_aco.py  tuning_acopg-clip.py  tuning_acopg.py  tuning_acosgd-l2.py  tuning_acosgd.py  tuning_adaco.py  tuning_antq.py  tuning_base.py  tuning_minmaxaco.py  tuning_pgaco-log.py  tuning_pgaco-ratio-clip.py  tuning_pgaco-ratio.py
src/pgaco/tuning/gp_minimize/: bayesian_tuning_aco.py  bayesian_tuning_pgaco-ratio-clip.py  (+1 more)
src/pgaco/utils/: __init__.py  graph.py  graph_generator.py  output.prof  profile_results.txt  profiling.py  readin_trial.py  runner.py  tsplib_reader.py
tests/: __init__.py  test_pgaco.py
(+230 files in other folders)
