[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pgaco"
version = "0.1.0"
description = "ACO with policy gradient"
readme = "README.rst"
authors = [
  {name = "Will Jardee", email = "willjardee@gmail.com"}
]
maintainers = [
  {name = "Will Jardee", email = "willjardee@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [

]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/willjardee/pgaco/issues"
changelog = "https://github.com/willjardee/pgaco/blob/master/changelog.md"
homepage = "https://github.com/willjardee/pgaco"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

